--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ body {
 	gap: 24px;
 }
 
-.nav-list-item {}
+.nav-list-item {
+}
 
 .nav-list-link {
 	display: inline-block;
@@ -92,7 +93,8 @@ body {
 	color: var(--dark-color);
 }
 
-.link {}
+.link {
+}
 
 .header-btn {
 	padding: 12px 24px;
@@ -114,6 +116,14 @@ body {
 	background-color: var(--secondary-bg-color);
 }
 
+.header-btn,
+.hero-btn {
+	transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
+	
+	/* transition-property: color, background-color;
+	transition-duration: 250ms;
+	transition-timing-function: ease-in-out; */
+}
 
 /* ______ HERO _________*/
 
@@ -156,6 +166,12 @@ body {
 	border-radius: 32px;
 }
 
+.hero-btn:focus,
+.hero-btn:hover {
+	color: var(--dark-color);
+	background-color: var(--secondary-bg-color);
+}
+
 .hero-desc {
 	font-weight: 600;
 	font-size: 14px;
@@ -181,9 +197,21 @@ body {
 }
 
 .advantages-title {
+	display: flex;
+	align-items: center;
 	font-size: 18px;
 	line-height: 1.6;
 	margin-bottom: 22px;
+}
+
+.advantages-title::before {
+	content: "";
+	display: block;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: var(--dark-color);
+	margin-right: 16px;
 }
 
 .advantages-text {
@@ -191,40 +219,37 @@ body {
 	line-height: 1.5;
 }
 
-
 .descr {
 	padding: 96px 0;
-	background-color:var(--dark-color);
+	background-color: var(--dark-color);
 }
 .descr .container {
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-between;
 	align-items: center;
-
 }
 .descr-title {
 	margin-bottom: 16px;
 	width: 453px;
-font-weight: 900;
-font-size: 24px;
-line-height: 1.33;
-letter-spacing: -0.1px;
-color: var(--light-color);
+	font-weight: 900;
+	font-size: 24px;
+	line-height: 1.33;
+	letter-spacing: -0.1px;
+	color: var(--light-color);
 }
 .descr-text {
 	margin-bottom: 16px;
 	width: 453px;
 	font-size: 16px;
 	line-height: 1.5;
-	color:var(--light-color);
+	color: var(--light-color);
 }
 .descr-list {
 	padding-left: 20px;
 	list-style: disc;
 }
 .descr-item {
-	
 	font-size: 16px;
 	line-height: 1.5;
 	color: var(--light-color);
@@ -232,4 +257,3 @@ color: var(--light-color);
 .descr-item:not(:last-child) {
 	margin-bottom: 8px;
 }
-
