--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
 	border: none;
 	outline: none;
 	white-space: nowrap;
-  }
+}
 ul {
 	list-style: none;
 	margin: 0;
@@ -77,6 +77,7 @@ body {
 }
 
 .logo {
+	position: relative;
 	font-weight: 900;
 	font-size: 25px;
 	line-height: 1.04;
@@ -85,6 +86,9 @@ body {
 }
 
 .logo-tm {
+	position: absolute;
+	top: 0;
+	right: -15px;
 	font-weight: 900;
 	font-size: 8px;
 	line-height: 1.12;
@@ -136,7 +140,7 @@ body {
 .header-btn,
 .hero-btn {
 	transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
-	
+
 	/* transition-property: color, background-color;
 	transition-duration: 250ms;
 	transition-timing-function: ease-in-out; */
@@ -276,15 +280,15 @@ body {
 }
 
 /* review */
-.review{
+.review {
 	padding-top: 96px;
 	padding-bottom: 124px;
 }
-.review-list{
+.review-list {
 	display: flex;
 	gap: 30px;
 }
-.review-item{
+.review-item {
 	background-color: var(--secondary-bg-color);
 	padding: 24px;
 }
@@ -303,14 +307,14 @@ body {
 	font-size: 14px;
 	line-height: 1.4;
 }
-.review-list-icon{
+.review-list-icon {
 	display: flex;
 	gap: 16px;
 }
-.review-box{
-	display: flex;	
-    justify-content:space-between;
-    align-items: flex-end;
+.review-box {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
 }
 
 .action {
@@ -365,4 +369,77 @@ body {
 .action-button:is(:hover, :focus) {
 	background-color: var(--dark-color);
 	color: var(--light-color);
+}
+
+/* footer */
+.footer {
+	padding-top: 96px;
+	padding-bottom: 108px;
+	background-color: var(--dark-color);
+}
+.footer-logo {
+	position: relative;
+	font-weight: 900;
+	font-size: 25px;
+	line-height: 1.04;
+	text-transform: uppercase;
+	color: var(--light-color);
+	text-decoration: none;
+}
+
+.footer-logo-tm {
+	position: absolute;
+	top: 0;
+	right: -15px;
+	font-weight: 900;
+	font-size: 8px;
+	line-height: 1.12;
+	text-transform: uppercase;
+}
+.footer-title {
+	margin-bottom: 16px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.1px;
+	color: var(--light-color);
+}
+.footer-item {
+	font-size: 14px;
+	line-height: 1.43;
+	color: var(--light-color);
+}
+.footer .container {
+	display: flex;
+	justify-content: space-between;
+}
+.footer-item:not(:last-child) {
+	margin-bottom: 8px;
+}
+.footer-dcr {
+	width: 360px;
+	font-size: 14px;
+	line-height: 1.43;
+	color: var(--light-color);
+	mix-blend-mode: normal;
+	opacity: 0.4;
+}
+.footer-input {
+	margin-bottom: 20px;
+	padding-left: 24px;
+	position: relative;
+	width: 360px;
+	height: 48px;
+	background-color: rgba(255, 255, 255, 0.15);
+	border-radius: 40px;
+	color: var(--light-color);
+	border: none;
+}
+.footer-form {
+	position: relative;
+}
+.telegr-icon {
+	position: absolute;
+	top: 12px;
+	right: 24px;
 }
